--- a/android/gradle/wrapper/gradle-wrapper.properties
+++ b/android/gradle/wrapper/gradle-wrapper.properties
@@ -2,4 +2,5 @@ distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
-distributionUrl=file\:/D:/soft/gradle/gradle-2.10-all.zip
+distributionUrl=file\:/D:/zhaofeng/gradle/gradle-2.10-all.zip
+
