--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "react": "~15.3.1",
     "react-native": "0.37.0",
+    "react-native-sqlite": "0.0.12",
     "react-timer-mixin": "^0.13.3",
     "whatwg-fetch": "^2.0.0"
   },
