--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -1,3 +1,4 @@
 rootProject.name = 'ReactProject'
 
-include ':app'
+include ':app',':react-native-sqlite-storage'
+project(':react-native-sqlite-storage').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-sqlite-storage/src/android')
