--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -135,6 +135,9 @@ android {
 }
 
 dependencies {
+    compile project(':react-native-fs')
+    compile project(':@remobile/react-native-zip')
+    compile project(':@remobile/react-native-file-transfer')
     compile fileTree(dir: "libs", include: ["*.jar"])
     compile "com.android.support:appcompat-v7:23.0.1"
     compile "com.facebook.react:react-native:+"  // From node_modules
