--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -135,13 +135,14 @@ android {
 }
 
 dependencies {
-    compile project(':react-native-fs')
-    compile project(':@remobile/react-native-zip')
-    compile project(':@remobile/react-native-file-transfer')
     compile fileTree(dir: "libs", include: ["*.jar"])
     compile "com.android.support:appcompat-v7:23.0.1"
     compile "com.facebook.react:react-native:+"  // From node_modules
     compile project(':react-native-sqlite-storage')
+    compile project(':react-native-cordova')
+    compile project(':react-native-fs')
+    compile project(':react-native-zip')
+    compile project(':react-native-file-transfer')
 }
 
 // Run this once to be able to run the application with BUCK
