--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -1,4 +1,5 @@
 rootProject.name = 'ReactProject'
 
-include ':app',':react-native-sqlite-storage',':react-native-fs',':react-native-zip',':react-native-file-transfer',':react-native-cordova'
+include ':app',':react-native-sqlite-storage',':react-native-cjzf-toast'
 project(':react-native-sqlite-storage').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-sqlite-storage/src/android')
+project(':react-native-cjzf-toast').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-cjzf-toast/android')
