--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-native": "0.37.0",
     "react-native-cjzf-toast": "^1.0.1",
     "react-native-drawer": "^2.3.0",
+    "react-native-scrollable-tab-view": "^0.7.0",
     "react-native-sqlite-storage": "^3.1.2",
     "react-native-tab-navigator": "^0.3.3",
     "react-timer-mixin": "^0.13.3",
